--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="center">
-        <h1>Javascript Alert</h1>
-        <p>First Javascript assignment</p>
-    </div>
+    Value of a is:
+   
 
 
 
